Fix invalid CSS alignment

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -45,7 +45,7 @@
   font-size: 25px;
   color: var(--header-text);
   margin-right: 2rem;
-  align-self: right;
+  align-self: flex-end;
 }
 
 /* Hide hamburger menu by default */
